--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ body{
 
 h1{
 	font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace; 
-
 }
 
 div.navbar{
@@ -102,3 +101,66 @@ header{
 	text-align: right;
 	font-size: 120px;
 }
+
+
+form{
+	text-align: left;
+}
+
+
+div.contact-me{
+	text-align: left;
+	border-bottom: 2px solid;
+	border-color: #e1e1e1;
+}
+
+#contact{
+	text-align: left;
+}
+
+
+div.contact-form{
+	font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+}
+
+input[type=text] {
+    width: 100%;
+    height: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+	text-align: left;
+	transition: width 0.4s ease-in-out
+}
+
+input[type=text]:focus{
+border: 3px solid #555;
+outline: none;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+	font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+    background-color: #464F54;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    float: left;
+}
+
+textarea{
+width: 100%;
+height: 200%;
+font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+outline: none;
+text-align: left;
+resize: none;
+}
+
+
+
+
+
