--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,4 +163,17 @@ resize: none;
 
 
 
+footer {
+	border-color: 2px solid;
+    display: block;
+    width: 100%;
+    height: 100px;
+    background-color: #464F54;
+    color: white;
+    border-color: #cccccc;
+}
+
+
+
+
 
