--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,35 +113,51 @@ form{
 	border-color: #e1e1e1;
 }
 
-
-.image{
- height:40%;
- width:100%;
- text-align:center;
- padding-top:2px;
- background-image:url(Lighthouse.jpg);
- background-size:100% auto;
- }
-
+.imgHolder {
+    position: relative;
+}
+.imgHolder p{
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    font-size: 35px;
+    font-weight: bold;
+    color: pink;
+}
 
 #contact{
 	text-align: left;
 }
 
 #picture1{
-	width: 250px;
+	width: 275px;
+	margin-bottom: 10px;
+	float: left;
+
 }
 
 #jets{
-	width: 250px;
+	width: 275px;
+	margin-bottom: 10px;
+	float: right;
 }
 
 #image4{
-	width: 250px;
+	width: 275px;
+	margin-bottom: 10px;
+	float: left;
 }
 
 #image5{
-	width: 250px;
+	width: 275px;
+	float: right;
+	margin-bottom: 10px;
+}
+
+#image6{
+	width:275px;
+	float: left;
+	margin-bottom: 10px
 }
 
 
