--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,17 +113,28 @@ form{
 	border-color: #e1e1e1;
 }
 
+
+
+ /*IMAGES CSS*/
 .imgHolder {
     position: relative;
+    overflow:hidden;
+    float: left;
+    padding: 5px 5px 5px 5px;
 }
+
 .imgHolder p{
     position: absolute;
     right: 50px;
     top: 50px;
     font-size: 35px;
     font-weight: bold;
-    color: pink;
+    color: white;
+    float: left;
+    padding: 5px 5px 5px 5px;
 }
+
+
 
 #contact{
 	text-align: left;
@@ -133,7 +144,6 @@ form{
 	width: 275px;
 	margin-bottom: 10px;
 	float: left;
-
 }
 
 #jets{
