--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ form{
 .imgHolder {
     position: relative;
     overflow:hidden;
-    float: left;
+    /*float: left;*/
     padding: 5px 5px 5px 5px;
 }
 
@@ -130,7 +130,7 @@ form{
     font-size: 35px;
     font-weight: bold;
     color: white;
-    float: left;
+    /*float: left;*/
     padding: 5px 5px 5px 5px;
 }
 
